--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "test-app",
+  "homepage": "https://dragonairdragon.github.io/test-repository",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "lint": "eslint src/**.js"
+    "lint": "eslint src/**.js",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.50.0"
+    "eslint": "^8.50.0",
+    "gh-pages": "^6.1.0"
   }
 }
