--- a/src/.releaserc
+++ b/src/.releaserc
@@ -1,4 +1,4 @@
 {
- "branches": ['main','feat-release'],
+ "branches": ['main'],
  "plugins": ['@semantic-release/commit-analyzer', '@semantic-release/release-notes-generator', '@semantic-release/github']
 }
